# report-generator-1

./: .gitignore  LICENSE  README.md  pyproject.toml  pythonpath.env  requirements.txt  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/dev/: Dockerfile
.devcontainer/nginx/conf.d/: nginx.conf
.devcontainer/report-engine/: Dockerfile  requirements_dev.txt
.devcontainer/unoserver/: Dockerfile
.devcontainer/unoserver/customfonts/: install_fonts.sh  setup_asroot.sh  setup_asworker.sh
.devcontainer/unoserver/ipafonts/: about.md  urls.txt
example/fastapi-report-engine/: .env_example  .secrets.toml  README.md  __init__.py  config.py  main.py  report_engine.py  requirements.txt  settings.toml
example/fastapi-report-engine/api/: __init__.py  api.py
example/fastapi-report-engine/api/endpoints/: __init__.py  docx.py  komainu.py  odt.py
example/fastapi-report-engine/api/models/: __init__.py  _json_base_model.py  _request_base_model.py  docx_request.py  odt_request.py  render_request.py
example/fastapi-report-engine/core/: config.py
example/fastapi-report-engine/sample/: README.md
example/fastapi-report-engine/services/: report_engine.py
example/fastapi-report-engine/tests/: test_komainu.py
src/rptgen1/: __about__.py  __init__.py  base_report_generator.py  docx_report_generator.py  loconvert.py  odt_report_generator.py  relatorio_report_generator.py  report_generator.py  report_generator_result.py  uno_client_config.py
tests/: test_odt_report_generator.py  test_sample.py  test_samples_docx.py  test_samples_odt.py  test_samples_relatorio.py
tests/sample/: README.md
tests/samples/: README.md
tests/samples/docx/: README.md
tests/samples/docx/tests/output/: replace_picture.docx
tests/samples/odt/: test.py
tests/test_data/: simple_template.ja.odt
