# code/pyproject.toml
# 
# How to writing
# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
#
# How to build
# https://packaging.python.org/ja/latest/tutorials/packaging-projects/
#
# > pip install --upgrade build
# > cd code
# > python -m build
# 


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rptgen1"
version = "0.1.2"
# dynamic = ["version"]
dependencies = ["python_odt_template[standard]", "unoserver"]
requires-python = ">=3.8"
authors = [{ name = "jp-96" }]
description = "A small example package"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["python-odt-template", "unoserver", "report-engine"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jp-96/report-generator-1"
Repository = "https://github.com/jp-96/report-generator-1"
