# code/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rptgen1/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "rptgen1"
dynamic = ["version"]
dependencies = [
  "unoserver",
  "python_odt_template[standard] @ git+https://github.com/jp-96/python-odt-template.git@pathguard",
  "docxtpl",
]
requires-python = ">=3.8"
authors = [{ name = "jp-96" }]
description = "A small example package"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
  "report-engine",
  "unoserver",
  "python-odt-template",
  "python-docx-template",
  "jinja2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jp-96/report-generator-1"
Repository = "https://github.com/jp-96/report-generator-1"
